Order and search

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,10 @@
     <nav>
     <a class="nave" href="{% url 'store:home' %}">Home</a>
     <a class="nave" href="{% url 'store:product-list' %}">Products</a>
-     {% if cart_id %}
-        <a href="{% url 'store:cart-detail' cart_id %}">Go to cart</a>
+    <a class="nave" href="{% url 'store:category-list' %}">Categories</a>
+    <a class="nave" href="{% url 'store:category-list' %}">Your orders</a>
+    {% if request.session.cart_id %}
+        <a style="float: right;" href="{% url 'store:cart-detail' request.session.cart_id %}">Go to cart</a>
     {% endif %}
     
       {% if request.user.is_authenticated %}
@@ -43,6 +45,13 @@
         {{ message }}
     {% endfor %}
 
+    <!-- =================================================== -->
+    <form action="{% url 'store:product-search' %}">
+
+        <input type="text" name="query" placeholder="search products">
+        <input type="submit" value="search">   
+
+    </form>
     <!-- =================================================== -->
 
 
