--- a/store/templates/store/cart_detail.html
+++ b/store/templates/store/cart_detail.html
@@ -6,6 +6,7 @@
 
 {% for item  in object.items.all  %}
     {{item.product}}
+    quantity{{item.quantity}}
     {{item.product.price}}
     <br>
 {%empty%}
@@ -15,7 +16,7 @@
 {% if request.user.is_authenticated %}
 
 
-    <form action="{% url 'store:order-create' %}", method="Post"> {%csrf_token%}
+    <form action="#", method="Post"> {%csrf_token%}
         <input type="submit" value="Place order" >
     </form>
   
