--- a/store/templates/store/order_list.html
+++ b/store/templates/store/order_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Your order{% endblock title %}
+{% block title %}Your orders{% endblock title %}
 {% block content %}
 
 <h1>Your orders</h1>
